# fastset

./: .python-version  README.md  pyproject.toml  setup.py  wrap_gen.py
src/fastset_impl/: fastset-anyobj.cpp  fastset.cpp  fastset.py  fastset.pyi  main.py  wrap.py
